packages/greyalien-prototype/greyalien_prototype-0.3.0.tar.gz/greyalien_prototype-0.3.0/tests/conformance/fail/match_non_exhaustive.grl
fn main() {
  let n = 3;
  let out = match n {
    1 => { 10; }
  };
  print(out);
}
